fixed letter spacing.

--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,6 @@ body, html {
 
 .item h2 {
     font-size: 3rem;
-    letter-spacing: .3rem;
 }
 
 .item p {
